--- a/style.css
+++ b/style.css
@@ -33,10 +33,21 @@ body {
   }
   
   .logo {
-    height: 50px;
-    position: absolute;
-    top: 10px; 
-    left: 100px;
+    height: 50px; /* Logo size */
+    display: block;
+  }
+  
+  @media (min-width: 601px) {
+    header {
+      justify-content: flex-start; /* Align logo to the left */
+    }
+  }
+  
+  /* 가로 600px 이하일 때: 로고를 가운데에 배치 */
+  @media (max-width: 600px) {
+    header {
+      justify-content: center; /* Center-align the logo */
+    }
   }
   
   .container {
